<resources>
    <string name="app_name">Mooi</string>
<!--    <string name="Maps_api_key" translatable="false">AIzaSyAv6aT_xmTKPDvexYgsyoUsc2RLLpdaUxw</string>-->
    <string name="Maps_api_key" translatable="false">AIzaSyCj1ryQm0SHBNqI00WCYdvvoaXdId2JgMU</string>

    <string name="sign_up"><u>Sign Up</u></string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="referral_code_optional">Referral Code(Optional)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender:</string>
    <string name="already_have_an_account_login">Already have an account?</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="please_verify_your_email_to_continue_n_otp_sent_on_email">Please verify your Email to continue\n  OTP sent on Email*</string>
    <string name="please_verify_your_mobile_to_continue_n_otp_sent_on_mobile_number">Please verify your Mobile Number to continue\n  OTP sent on Mobile Number*</string>
    <string name="verify">Verify</string>
    <string name="congrats">Congrats!</string>
    <string name="your_account_is_created">Your account is created!</string>
    <string name="done">Done</string>
    <string name="update_profile">Update Profile</string>
    <string name="first_namestar">First Name*</string>
    <string name="last_namestar">Last Name*</string>
    <string name="mobile_numberstar">Mobile Number*</string>
    <string name="emailstar">Email*</string>
    <string name="identify_skin_type">Identify skin type</string>
    <string name="identify_hair_type">Identify hair type</string>
    <string name="current_password">Current Password*</string>
    <string name="new_password">New Password*</string>
    <string name="confirm_passwordstar">Confirm Password*</string>
    <string name="home">Home</string>
    <string name="appointments">Appointments</string>
    <string name="invoice">Invoice</string>
    <string name="location">Location</string>
    <string name="book">Book</string>
    <string name="my_account">My Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homepage">HomePage</string>
    <string name="all_categories">All Categories</string>
    <string name="hair">Hair</string>
    <string name="skin">Skin</string>
    <string name="spa">Spa</string>
    <string name="nail">Nail</string>
    <string name="makeup">Makeup</string>
    <string name="products">Products:</string>
    <string name="filter_by">Filter by-</string>
    <string name="submit">Submit</string>
    <string name="search_area">Search area...</string>
    <string name="search_results">Search Results -</string>
    <string name="search">Search</string>
    <string name="search_salon_name_or_area">Search salon name or area...</string>
    <string name="confirmed">Confirmed</string>
    <string name="start_otp">Start OTP : </string>
    <string name="call">Call</string>
    <string name="cancel">Cancel</string>
    <string name="paid">Paid :</string>
    <string name="payment_type">Payment Type :</string>
    <string name="sr_no">Sr No.</string>
    <string name="service_name">Service Name</string>
    <string name="price">Price (₹)</string>
    <string name="gst_amount">GST Amount</string>
    <string name="total">Total</string>
    <string name="sub_total">Sub-Total</string>
    <string name="hi">Hi!</string>
    <string name="edit_profile"><![CDATA[Edit profile >]]></string>
    <string name="my_appointment_history">My Appointment History</string>
    <string name="accounts_amp_settings"><![CDATA[Accounts & Settings]]></string>
    <string name="view_all_your_bookings_and_purchases">View all your bookings and purchases</string>
    <string name="location_notifications_amp_more"><![CDATA[Location & more]]></string>
    <string name="blog">Blog</string>
    <string name="refer_amp_earn"><![CDATA[Refer & Earn]]></string>
    <string name="help">Help</string>
    <string name="customer_support">Customer Support</string>
    <string name="about">About</string>
    <string name="rate_us">Rate Us</string>
    <string name="my_location">My Location</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="type_a_message">Type a message...</string>
    <string name="book_now">Book Now</string>
    <string name="combo_amp_offers"><![CDATA[Combo & Offers]]></string>
    <string name="rs">₹</string>
    <string name="combo_name">Combo Name</string>
    <string name="services">Menu</string>
    <string name="add_select_operator">+ Select Operator</string>
    <string name="minus_Remove_operator">- Remove</string>
    <string name="Price_">Price :</string>
    <string name="select_operator">Select Operator</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="select_payment_type">Select Payment \nType</string>
    <string name="online_payment">Online Payment</string>
    <string name="pay_now">Pay now</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="cancellation_n_request">Cancellation \n Request!</string>
    <string name="penalty">Penalty -</string>
    <string name="cancellation_time_16hrs_0_n_8_16_50_8hr_100_penalty"><![CDATA[Cancellation Time > 16 Hr > 0%,\n 0-16 Hr > 50%, 8 Hr-100% penalty.]]></string>
    <string name="book_appointment">Book Appointment</string>
    <string name="select_time_slot">Select Time Slot</string>
    <string name="selected_services">Selected Services</string>
    <string name="Your_appointment_booking_request">Your booking request \nis sent successfully, you will get a confirmation shortly.</string>
    <string name="update_profile_"><![CDATA[Update Profile>]]></string>
    <string name="add">Add</string>
    <string name="Completed"><b>COMPLETED</b></string>
    <string name="Canceled"><b>CANCELLED</b></string>
    <string name="Combo"><b>COMBO</b></string>
    <string name="Offers"><b>OFFERS</b></string>
    <string name="payment_status">Payment Status:</string>
    <string name="cancelled">Cancelled</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="request_otp">Request OTP</string>
    <string name="success">Success!</string>
    <string name="your_password_has_been_changed">Your password has been changed!</string>
    <string name="working_hours">Working Hours</string>
    <string name="update">Update</string>
    <string name="ok">Ok</string>
    <string name="apply_coupons">Apply Coupons</string>
    <string name="sort_filter_by"><![CDATA[Sort & Filter by -]]></string>
    <string name="filter">Filter</string>
    <string name="go_to_cart">Go to Cart</string>

    <string name="enter_username">Enter Email</string>
    <string name="enter_valid_username">Enter valid Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="went_wrong">Something went wrong. Please try again!</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>

    <string name="please_enter_registered_email_id">Please enter registered Email</string>
    <string name="please_enter_valid_registered_email_id">Please enter registered valid Email</string>
    <string name="please_enter_registered_mobile">Please enter registered Mobile number</string>
    <string name="enter_password_with_special_characters">Password should be at least 8 characters long, must include letters, numbers and special characters.</string>

    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="lbl_set_profile_photo">Set Profile image</string>
    <string name="enter_valid_mobile_number">Enter Valid Mobile Number</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="password_doesnt_match">Password doesn\'t match</string>
    <string name="loading">Loading...</string>
    <string name="salon_off">Salon is not accepting booking on selected date</string>
    <string name="salon_off_time">Salon is closed now choose another date to proceed</string>
    <string name="email_or_mobile_number">Email</string>
    By signing up you agree to our privacy policy and terms of services.
    <string name="terms_conditions">By signing up you agree to our privacy policy and terms of services.</string>

    <string name="about_us"><pre>Who loves being pampered ? we do !<br/><br/>
Nothing can replace the awesome feeling we get after a relaxing SPA or a grooming session at the Salon. Most of us prefer to visit a particular Salon/SPA regularly. But what really prevents us from trying something new ? Is it a lack of trust and information about the new facility ? Do they use my preferred products ? Are the therapists good enough for me ? Are there offers, even at my existing Salon ?\n\n
        Well, As an answer to such questions and much more we present to you <b>mooi</b> (pronounced as moy/मॉय)\n\n
mooi aims to enhance your grooming and relaxation experience through a platform that answers all the above and lets you book your appointments with your preferred Salon and Spa at the click of a button.\n\n
mooi lets you search Salon/SPA by their locality, give you trusted ratings from people who have completed services, details of brands etc. etc.\n\n
Wait ! it\'s not over, you can book services with your preferred therapist, for a particular brand of product at your preferred time. To top it all you pay only after completion of the service at the Salon or on our payment gateway in which case you earn exciting reward points.\n\n
Let\'s enjoy this beautiful and relaxed journey together !\n\n
        mooi !</pre></string>
</resources>
