<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_rounded_white_background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_account_created_success"
            android:tint="@color/skyBlueLight"
            />
        <com.prometteur.saloonuser.Utils.TextViewCustomFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/success"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold"
            />
        <com.prometteur.saloonuser.Utils.TextViewCustomFont
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/your_password_has_been_changed"
            android:textColor="@color/black"
            android:textSize="14dp"
            />

        <com.prometteur.saloonuser.Utils.ButtonCustomFont
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/done"
            android:id="@+id/btn_Done"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:background="@drawable/btn_bg"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:onClick="closeDialog"
            />

    </LinearLayout>

</RelativeLayout>