<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/sdp30StartEndMargin"
    android:background="@drawable/bg_white_curved_corners"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:padding="@dimen/_10sdp">


    <ImageView

        android:id="@+id/ivCongoimg"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/ic_account_created_success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.prometteur.saloonuser.Utils.TextViewCustomFont
        android:id="@+id/tvCongrats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/congrats"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCongoimg" />
    <com.prometteur.saloonuser.Utils.TextViewCustomFont
        android:id="@+id/tvAccountCreated"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/your_account_is_created"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCongrats" />

    <com.prometteur.saloonuser.Utils.ButtonCustomFont
        android:id="@+id/btnDone"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/btn_bg"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAccountCreated" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>