<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@drawable/bg_white_curved_corners"
        >


    <ImageView
        android:id="@+id/ivPayimg"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/ic_payment_transparent_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.prometteur.saloonuser.Utils.TextViewCustomFont
        android:id="@+id/tvPayTypeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_payment_type"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/ivPayimg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <RadioGroup
        android:id="@+id/rgPaymentType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvPayTypeTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        >
        <com.prometteur.saloonuser.Utils.RadioButtonCustomFont
            android:id="@+id/rbtnSalon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Salon"
            />
        <com.prometteur.saloonuser.Utils.RadioButtonCustomFont
            android:id="@+id/rbtnOnlinePay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online_payment"
            android:layout_marginTop="@dimen/_5sdp"
            />


    </RadioGroup>


    <com.prometteur.saloonuser.Utils.ButtonCustomFont
        android:id="@+id/btnPayNow"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:background="@drawable/btn_bg"
        android:text="@string/pay_now"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rgPaymentType"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rgPaymentType"
        app:layout_constraintTop_toBottomOf="@+id/rgPaymentType"
        app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>