<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/img_login"
            android:layout_marginTop="-28dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/layout_login_rounded_white_background"
            android:padding="@dimen/_10sdp"
            android:layout_marginTop="-56dp"
            >


            <com.prometteur.saloonuser.Utils.TextViewCustomFont
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/enter_otp"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold"
                />
            <com.prometteur.saloonuser.Utils.TextViewCustomFont
                android:id="@+id/tvEmailOrMobNoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/please_verify_your_email_to_continue_n_otp_sent_on_email"
                android:textColor="@color/darkGray"
                android:textSize="14sp"
                />
            <com.prometteur.saloonuser.Utils.TextViewCustomFont
                android:id="@+id/tvEmailOrMobNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="abc@gmail.com / +91-9876543210"
                android:textColor="@color/darkGray"
                android:textSize="14dp"
                />
            <in.aabhasjindal.otptextview.OtpTextView
                android:id="@+id/otpTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                app:height="45dp"
                app:width="45dp"
                app:otp_box_background="@drawable/ic_round_border_otp"
                app:otp_box_background_active="@drawable/ic_round_border_otp_yellow"
                app:bar_height="2dp"
                app:length="6"
                android:layout_gravity="center"
                app:otp_text_size="20dp"
                />
            <com.prometteur.saloonuser.Utils.TextViewCustomFont
                android:id="@+id/tvResend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="Resend OTP (30)"
                android:textColor="@color/skyBlueLight"
                android:textSize="@dimen/_14sdp"
                android:layout_margin="@dimen/_10sdp"
                android:paddingTop="40dp"

                />
            <com.prometteur.saloonuser.Utils.ButtonCustomFont
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/verify"
                android:id="@+id/btnVerify"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:background="@drawable/btn_bg"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>