<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ActivitySearchLocation">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:layout_marginLeft="-15dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/ivBackArrowimg"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:padding="5dp"
                    android:src="@drawable/ic_arrow_back_white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.prometteur.saloonuser.Utils.TextViewCustomFont
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="4dp"
                    android:text="@string/search"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/ivBackArrowimg"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.272" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <com.prometteur.saloonuser.Utils.CustomeEditText
        android:id="@+id/edtSearchSalon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@null"
        android:drawableEnd="@drawable/ic_search_grey"
        android:hint="@string/search_salon_name_or_area"
        android:padding="@dimen/_5sdp"
        android:textSize="18sp"
        android:inputType="text"
        android:imeOptions="actionSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />

    <com.prometteur.saloonuser.Utils.TextViewCustomFont
        android:id="@+id/tvSearchResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/AppointmentsBgGrey"
        android:text="@string/search_results"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingBottom="@dimen/_4sdp"
        android:paddingTop="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSearchSalon"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_SalonAddressResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSearchResults"
        />
 <include layout="@layout/activity_no_data"
    android:id="@+id/includeEmpty"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>